@@ -2,7 +2,7 @@
 # SportsTracker resources for english language (default)
 #
 # Version: SportsTracker 7.5.1
-# Last update: 2018/07/16
+# Last update: 2018/10/13
 #
 # (C) 2018, Stefan Saring
 #####################################################################
