@@ -2,7 +2,7 @@
 # SportsTracker resources for german language
 #
 # Version: SportsTracker 7.5.1
-# Last update: 2018/07/16
+# Last update: 2018/10/13
 #
 # (C) 2018, Stefan Saring
 # Translated by Stefan Saring <projects@saring.de>
@@ -535,7 +535,7 @@ pv.opt.maximum.text=Maximum:
 pv.opt.total.text=Gesamt:
 pv.opt.distance.text=Stecke:
 pv.opt.bike_nr.text=Rad Nummer:
-pv.opt.cadence_data.text=Trittfrequenz
+pv.opt.cadence_data.text=Tritt-/Schrittfrequenzdaten
 pv.opt.altitude_data.text=Höhendaten
 pv.opt.ascent.text=Aufstieg:
 pv.opt.descent.text=Abstieg:
