@@ -257,8 +257,7 @@ public class PolarSRawParser extends AbstractExerciseParser {
         if (recMode.isCadence()) {
             short cadenceAvg = (short) fileContent[90];
             short cadenceMax = (short) fileContent[91];
-            short cyclesTotal = 0;
-            exercise.setCadence(new ExerciseCadence(cadenceAvg, cadenceMax, cyclesTotal));
+            exercise.setCadence(new ExerciseCadence(cadenceAvg, cadenceMax, null));
         }
 
         // get altitude data of exercise (if recorded)
