@@ -470,7 +470,6 @@ class PolarHRMParser : AbstractExerciseParser() {
             var avgCadenceSamples = 0
             var cadenceAvg: Short = 0
             var cadenceMax: Short = 0
-            var cadenceTotal: Short = 0
 
             for (sample in exercise.sampleList) {
                 sample.cadence?.let { sampleCadence ->
@@ -485,7 +484,7 @@ class PolarHRMParser : AbstractExerciseParser() {
                 cadenceAvg = Math.round(avgCadenceSum / avgCadenceSamples.toDouble()).toShort()
             }
 
-            exercise.cadence = ExerciseCadence(cadenceAvg, cadenceMax, cadenceTotal)
+            exercise.cadence = ExerciseCadence(cadenceAvg, cadenceMax)
         }
 
         // repair distance values of samples
